fixed unicode? display bug

--- a/views/ejs/profile-visitor.ejs
+++ b/views/ejs/profile-visitor.ejs
@@ -36,7 +36,7 @@
                 </div>
             </div>
             <div id="postdata" class="post-data letter-space-neg05 font-weight-400">
-                <a href="#">comments<span id="commentarrow" class="symbol-monospace">↓</span></a>
+                <a href="#">comments<span id="commentarrow" class="symbol-monospace">↓</span></a>
             </div>
             <script>
                 marked_passage = marked($('#about-content').text());
