--- a/views/html/archive.html
+++ b/views/html/archive.html
@@ -21,7 +21,7 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <h5 class="no-border no-margin no-padding" style="font-weight: 600;" >
+                    <h5 class="no-border no-margin no-padding" style="font-weight: 600;" >
                         postenuous
                     </h5>
                 </div>
