--- a/views/html/index_collapse.html
+++ b/views/html/index_collapse.html
@@ -15,7 +15,7 @@
 
 <body style="padding: 16px">
     <div class="container">
-        <h1>postenuous</h1>
+        <h1>postenuous</h1>
         <h5>compilers, principles, & tools</h5>
         <ul class="nav font-weight-bold h5">
             <li class="nav-item">
