--- a/views/ejs/common/post-data.ejs
+++ b/views/ejs/common/post-data.ejs
@@ -2,8 +2,8 @@
     <div id="postdata-header" class="post-data letter-space-neg05 font-weight-400">
         <span>viewed <%=post.viewCount%> times |</span>
         <a data-toggle="collapse" href="#comments-div" aria-expanded="false" aria-controls="collapseExample">
-            <span id="comment-count">comments (<%=post.comments.length%>)</span>
-            <span id="commentarrow" class="symbol-monospace">↓</span>
+            <span id="comment-count">comments (<%=post.comments.length%>)</span>
+            <span id="commentarrow" class="symbol-monospace">↓</span>
         </a>
     </div>
     <div id="comments-div" class="collapse">
