--- a/views/html/index.html
+++ b/views/html/index.html
@@ -25,7 +25,7 @@
                 <div class="col">
                     <div class="row">
                         <div class="col-auto">
-                            <h5 class="no-border no-margin no-padding" style="font-weight: 600;" >
+                            <h5 class="no-border no-margin no-padding" style="font-weight: 600;" >
                                 postenuous
                             </h5>
                         </div>
