--- a/views/html/post-visitor.html
+++ b/views/html/post-visitor.html
@@ -25,7 +25,7 @@
                 <div class="col">
                     <div class="row">
                         <div class="col">
-                            <h5 class="no-border no-margin no-padding" style="font-weight: 600;" >
+                            <h5 class="no-border no-margin no-padding" style="font-weight: 600;" >
                                 postenuous
                             </h5>
                         </div>
@@ -77,7 +77,7 @@
             </div>
             <br>
             <div id="postdata" class="post-data letter-space-neg05 font-weight-400">viewed <%=post.viewCount%> times |
-                <a href="#">comments<span id="commentarrow" class="symbol-monospace">↓</span></a>
+                <a href="#">comments<span id="commentarrow" class="symbol-monospace">↓</span></a>
             </div>
             <hr style="margin-bottom: 4px">
             <div id="navigation" class="letter-space-neg05 font-weight-500">
