--- a/views/html/post.html
+++ b/views/html/post.html
@@ -25,7 +25,7 @@
                 <div class="col">
                     <div class="row">
                         <div class="col">
-                            <h5 class="no-border no-margin no-padding" style="font-weight: 600;" >
+                            <h5 class="no-border no-margin no-padding" style="font-weight: 600;" >
                                 postenuous
                             </h5>
                         </div>
@@ -210,8 +210,8 @@
                     <span>viewed <%=post.viewCount%> times |</span>
                     <a data-toggle="collapse" href="#comments-area" aria-expanded="false"
                         aria-controls="collapseExample">
-                        <span>comments</span>
-                        <span id="commentarrow" class="symbol-monospace">↓</span>
+                        <span>comments</span>
+                        <span id="commentarrow" class="symbol-monospace">↓</span>
                     </a>
                 </div>
                 <div id="comments-area" class="collapse">
