--- a/views/html/profile-other.html
+++ b/views/html/profile-other.html
@@ -25,7 +25,7 @@
                 <div class="col">
                     <div class="row">
                         <div class="col">
-                            <h5 class="no-border no-margin no-padding" style="font-weight: 600;" >
+                            <h5 class="no-border no-margin no-padding" style="font-weight: 600;" >
                                 postenuous
                             </h5>
                         </div>
@@ -108,7 +108,7 @@
                 </div>
             </div>
             <div id="postdata" class="post-data letter-space-neg05 font-weight-400">
-                <a href="#">comments<span id="commentarrow" class="symbol-monospace">↓</span></a>
+                <a href="#">comments<span id="commentarrow" class="symbol-monospace">↓</span></a>
             </div>
             <script>
                 marked_passage = marked($('#about-content').text())
