now you can remove comments

--- a/views/ejs/common/comment.ejs
+++ b/views/ejs/common/comment.ejs
@@ -14,6 +14,9 @@
       <div style="font-size: 90%;" class="post-data">
         <strong><%=comment.author.name%></strong> | <%=comment.createdAt.toLocaleString()%> | <a href="#replyto"
           id="replyto<%=i%>" value="<%=i%>">reply</a>
+        <% if (editable) { %>
+        <span> | <a href="javascript:void(0);" id="comment-remove-link-<%=comment.id%>" onclick="removeComment(this)">remove</a></span>
+        <% } %>
       </div>
     </div>
   </div>
