--- a/views/ejs/common/post-data.ejs
+++ b/views/ejs/common/post-data.ejs
@@ -9,7 +9,11 @@
     <div id="comments-div" class="collapse">
         <div id="comments-area">
             <% if (post.comments.length > 0) { %>
-            <%- include('comments-area', { comments: post.comments }) %>
+            <% if (loginAs) { %>
+            <%- include('comments-area', { comments: post.comments , editable: (loginAs.isAdmin || (loginAs.username == post.author.username ))}) %>
+            <% } else { %>
+            <%- include('comments-area', { comments: post.comments , editable: false}) %>
+            <% } %>
             <% } %>
         </div>
         <hr class="hr" style="margin-top: 4px;">
@@ -25,7 +29,7 @@
                 <div class="form-group col-auto">
                     <label for="commentauthor" class="col-form-label-sm">name:</label>
                 </div>
-                <div class="form-group col-auto" style="width: 8rem;">
+                <div class="form-group col-auto" style="width: 6rem;">
                     <% if (loginAs) { %>
                     <input type="text" class="form-control form-control-sm" id="commentauthor" name="name"
                         value="<%=loginAs.name%>">
@@ -53,21 +57,21 @@
 
                 function init() {
                     let refers = $("a[id^=link-to]");
-                        for (let i = 0; i < refers.length; i++) {
-                            let refer = refers[i]
-                            $(refer).text($('#comment-no-' + $(refer).text()).text())
-                        }
-                        $("a[id^=replyto").click(function () {
-                            console.log($(this).prop('href'))
-                        });
-                        $("a[id^=link-to-").click(function () {
-                            let replytoCommentElement = $('#' + $(this).prop('href').split('#')[1]);
-                            replytoCommentElement.addClass('comment-emphasized');
+                    for (let i = 0; i < refers.length; i++) {
+                        let refer = refers[i]
+                        $(refer).text($('#comment-no-' + $(refer).text()).text())
+                    }
+                    $("a[id^=replyto").click(function () {
+                        console.log($(this).prop('href'))
+                    });
+                    $("a[id^=link-to-").click(function () {
+                        let replytoCommentElement = $('#' + $(this).prop('href').split('#')[1]);
+                        replytoCommentElement.addClass('comment-emphasized');
 
-                            setTimeout(() => {
-                                replytoCommentElement.removeClass('comment-emphasized');
-                            }, 1000)
-                        });
+                        setTimeout(() => {
+                            replytoCommentElement.removeClass('comment-emphasized');
+                        }, 1000)
+                    });
                 }
 
                 init();
@@ -86,8 +90,6 @@
                         dateType: 'json',
                         data: params
                     }).done(function (data) {
-                        console.log(this)
-                        $('#comments-area').html("");
                         $('#comments-area').html(data.comments);
                         $('#replyto').html(data.replytoOptions);
                         init()
