--- a/views/ejs/common/comment-disabled.ejs
+++ b/views/ejs/common/comment-disabled.ejs
@@ -1,22 +1,18 @@
-<hr class="hr-thin">
-<div id="comment-<%=comment.id%>">
-  <div class="row">
-    <div class="col-auto" style="padding-right: 0;">
-      <code id="comment-no-<%=comment.id%>">#<%=i%></code>
+<tr id="comment-<%=comment.id%>" class="bg-dark text-white">
+  <th scope="row"><code id="comment-no-<%=comment.id%>" class="text-white"><s>#<%=i%></s></code></th>
+  <td class="comment-table-cell">
+    <% if (comment.parentComment) { %>
+    <code class="text-white">&gt; in reply to <a href="#comment-<%=comment.parentComment%>" id="link-to-<%=comment.parentComment%>"><%=comment.parentComment%></a></code>
+    <% } %>
+    <div>
+      <span><%=comment.body%></span>
     </div>
-    <div class="col" style="padding-left: 12px;">
-      <% if (comment.parentComment) { %>
-      <code>&gt; in reply to <a href="#comment-<%=comment.parentComment%>" id="link-to-<%=comment.parentComment%>"><%=comment.parentComment%></a></code>
+    <div style="font-size: 90%;" class="post-data text-white">
+      <strong><%=comment.author.name%></strong> | <%=comment.createdAt.toLocaleString()%>
+      <% if (editable) { %>
+      <span> | <a href="javascript:void(0);" id="comment-show-link-<%=comment.id%>"
+          onclick="showComment(this)">show</a></span>
       <% } %>
-      <div>
-        <span><s><%=comment.body%></s></span>
-      </div>
-      <div style="font-size: 90%;" class="post-data">
-        <strong><%=comment.author.name%></strong> | <%=comment.createdAt.toLocaleString()%>
-        <% if (editable) { %>
-        <span> | <a href="javascript:void(0);" id="comment-show-link-<%=comment.id%>" onclick="showComment(this)">show</a></span>
-        <% } %>
-      </div>
     </div>
-  </div>
-</div>
+  </td>
+</tr>
