--- a/views/ejs/common/comment.ejs
+++ b/views/ejs/common/comment.ejs
@@ -1,23 +1,19 @@
-<hr class="hr-thin">
-<div id="comment-<%=comment.id%>">
-  <div class="row">
-    <div class="col-auto" style="padding-right: 0;">
-      <code id="comment-no-<%=comment.id%>">#<%=i%></code>
+<tr id="comment-<%=comment.id%>">
+  <th scope="row"><code id="comment-no-<%=comment.id%>">#<%=i%></code></th>
+  <td class="comment-table-cell">
+    <% if (comment.parentComment) { %>
+    <code>&gt; in reply to <a href="#comment-<%=comment.parentComment%>" id="link-to-<%=comment.parentComment%>"><%=comment.parentComment%></a></code>
+    <% } %>
+    <div>
+      <span><%=comment.body%></span>
     </div>
-    <div class="col" style="padding-left: 12px;">
-      <% if (comment.parentComment) { %>
-      <code>&gt; in reply to <a href="#comment-<%=comment.parentComment%>" id="link-to-<%=comment.parentComment%>"><%=comment.parentComment%></a></code>
+    <div style="font-size: 90%;" class="post-data">
+      <strong><%=comment.author.name%></strong> | <%=comment.createdAt.toLocaleString()%> | <a href="#replyto"
+        id="replyto<%=i%>" value="<%=i%>">reply</a>
+      <% if (editable) { %>
+      <span> | <a href="javascript:void(0);" id="comment-remove-link-<%=comment.id%>"
+          onclick="removeComment(this)">remove</a></span>
       <% } %>
-      <div>
-        <span><%=comment.body%></span>
-      </div>
-      <div style="font-size: 90%;" class="post-data">
-        <strong><%=comment.author.name%></strong> | <%=comment.createdAt.toLocaleString()%> | <a href="#replyto"
-          id="replyto<%=i%>" value="<%=i%>">reply</a>
-        <% if (editable) { %>
-        <span> | <a href="javascript:void(0);" id="comment-remove-link-<%=comment.id%>" onclick="removeComment(this)">remove</a></span>
-        <% } %>
-      </div>
     </div>
-  </div>
-</div>
+  </td>
+</tr>
