--- a/views/ejs/editor-post.ejs
+++ b/views/ejs/editor-post.ejs
@@ -2,7 +2,7 @@
 
 <body style="font-feature-settings:'';">
     <div style="padding: 16px">
-        <%- include('common/header.ejs', {loginAs: loginAs}) %>
+        <%- include('common/header.ejs', {loginAs: loginAs, noUserDropdown: false}) %>
 
         <div class="container">
             <h5 class="letter-space-neg05 font-weight-500">create new post</h5>
