--- a/views/ejs/profile-other.ejs
+++ b/views/ejs/profile-other.ejs
@@ -2,7 +2,7 @@
 
 <body style="font-feature-settings:'';">
     <div style="padding: 16px">
-        <%- include('common/header.ejs', {loginAs: loginAs}) %>
+        <%- include('common/header.ejs', {loginAs: loginAs, noUserDropdown: false}) %>
         <div class="container">
             <div id="headers" style="margin-bottom: 1rem;">
                 <h5 class="font-weight-600 no-margin">
