--- a/views/ejs/profile-visitor.ejs
+++ b/views/ejs/profile-visitor.ejs
@@ -2,7 +2,7 @@
 
 <body style="font-feature-settings:'';">
     <div style="padding: 16px">
-        <%- include('common/header-visitor.ejs') %>
+        <%- include('common/header.ejs', {loginAs: null, noUserDropdown: true}) %>
 
         <div class="container">
             <div id="headers" style="margin-bottom: 1rem;">
