--- a/views/ejs/author.ejs
+++ b/views/ejs/author.ejs
@@ -2,7 +2,7 @@
 
 <body style="font-feature-settings:''; font-size: 100%;">
     <div style="padding: 16px">
-        <%- include('common/header.ejs', {loginAs: loginAs}) %>
+        <%- include('common/header.ejs', {loginAs: loginAs, noUserDropdown: false}) %>
         
         <%- include('common/author-view.ejs', {author: author, posts: posts}) %>
 
