--- a/views/ejs/common/comment.ejs
+++ b/views/ejs/common/comment.ejs
@@ -1,6 +1,6 @@
 <tr id="comment-<%=comment.id%>">
   <th scope="row"><code id="comment-no-<%=comment.id%>">#<%=i%></code></th>
-  <td class="comment-table-cell">
+  <td class="comment-table-cell" style="border-left: 1px">
     <% if (comment.parentComment) { %>
     <code>&gt; in reply to <a href="#comment-<%=comment.parentComment%>" id="link-to-<%=comment.parentComment%>"><%=comment.parentComment%></a></code>
     <% } %>
