--- a/views/ejs/common/header.ejs
+++ b/views/ejs/common/header.ejs
@@ -1,9 +1,16 @@
 <div class="container">
     <div class="row">
         <%- include('header-navi') %>
+        <% if (noUserDropdown) { %>
+        <% } else { %>
         <div class="col-auto" style="text-align: right;">
+            <% if (loginAs) { %>
             <%- include('user-dropdown', { loginAs: loginAs }) %>
+            <% } else { %>
+            <%- include('login-dropdown') %>
+            <% } %>
         </div>
+        <% } %>
     </div>
     <hr>
 </div>
