--- a/views/ejs/common/post-data.ejs
+++ b/views/ejs/common/post-data.ejs
@@ -26,6 +26,19 @@
                         placeholder="comment here..."></textarea>
                 </div>
             </div>
+            <div class="form-group">
+                <div class="input-group mb-2">
+                    <div class="input-group-prepend">
+                        <div class="input-group-text">homepage</div>
+                    </div>
+                    <% if (loginAs) { %>
+                    <input type="text" class="form-control" id="commentauthorhomepage" name="homepage"
+                        value="/user/<%=loginAs.username%>">
+                    <% } else { %>
+                    <input type="text" class="form-control" id="commentauthorhomepage" name="homepage">
+                    <% } %>
+                </div>
+            </div>
             <div class="form-row">
                 <div class="col-auto">
                     <div class="input-group mb-2">
@@ -40,23 +53,10 @@
                         <% } %>
                     </div>
                 </div>
-                <div class="col-auto">
-                    <div class="input-group mb-2">
-                        <div class="input-group-prepend">
-                            <div class="input-group-text">homepage</div>
-                        </div>
-                        <% if (loginAs) { %>
-                        <input type="text" class="form-control" id="commentauthorhomepage"
-                            name="homepage" value="/user/<%=loginAs.username%>">
-                        <% } else { %>
-                        <input type="text" class="form-control" id="commentauthorhomepage"
-                            name="homepage">
-                        <% } %>
-                    </div>
-                </div>
+
+                <div class="col-auto"><label for="replyto" class="col-form-label">reply to:</label></div>
                 <div class="form-group col-auto">
-                    <label for="replyto" class="col-form-label-sm">reply to:</label>
-                    <select id="replyto" name="replyto" class="form-control-sm form-control">
+                    <select id="replyto" name="replyto" class="form-control">
                         <option value="noreply" selected>...</option>
                         <% for( let i = 0; i < post.comments.length; i++ ) { %>
                         <% if (!post.comments[i].disabled) { %>
@@ -66,7 +66,7 @@
                     </select>
                 </div>
                 <div class="col-auto">
-                    <button class="btn btn-primary btn-sm" id="commentsubmit">Comment</button>
+                    <button class="btn btn-primary" id="commentsubmit">Comment</button>
                 </div>
             </div>
             <script>
