--- a/views/ejs/redirect.ejs
+++ b/views/ejs/redirect.ejs
@@ -6,7 +6,7 @@
     <div class="container">
       <div>
         <h5><code>NOTICE:</code></h5>
-        you are leaving postenuous, click <code><a href="http://<%=req.query.site%>"><%=req.query.site%></a></code> to process.
+        you are leaving postenuous, click <code><a href="<%=redirectTo%>"><%=redirectTo%></a></code> to process.
         <br><br>
         <a href="<%=req.headers.referer%>">← back to previous page</a>
         <hr>
