--- a/views/ejs/index-visitor.ejs
+++ b/views/ejs/index-visitor.ejs
@@ -4,7 +4,7 @@
     <div style="padding: 16px">
         <%- include('common/header.ejs', {noUserDropdown: false, loginAs: null}) %>
 
-        <%- include('common/post-list.ejs', {posts: posts, pageno: pageno, pageCount: pageCount}) %>
+        <%- include('common/post-list.ejs', {posts: posts, pageno: pageno, pageCount: pageCount, postPerPage: postPerPage}) %>
 
         <%- include('common/footer.ejs') %>
     </div>
