--- a/views/ejs/common/post-list.ejs
+++ b/views/ejs/common/post-list.ejs
@@ -1,41 +1,9 @@
 <div class="container">
-   
+
     <div id="posts">
         <div class="accordion" id="postAccordion">
             <% for(let i = 0; i < posts.length; i++) { %>
-            <div class="card post-caption">
-                <div class="card-header bg-white" id="heading_<%=i%>" style="padding: 0; border: hidden"
-                    data-toggle="collapse" data-target="#post_<%=i%>" aria-expanded="true"
-                    aria-controls="collapse_<%=i%>">
-                    <a href="/post/<%=posts[i].id%>" class="post-title kuro">
-                        <%= posts[i].title %>
-                    </a>
-                    <a href="#" id="arrow_<%=i%>" class="symbol-monospace holo-blue-dark">↓</a>
-                </div>
-
-                <div id="post_<%=i%>" class="collapse" aria-labelledby="heading_<%=i%>" data-parent="">
-                    <div class="card-body" style="padding: 0;">
-                        <div>
-                            <a href="/user/<%= posts[i].author.username %>" class="sub-title">
-                                <%= posts[i].author.name %>
-                            </a>
-                            &emsp;
-                            <code style="color: gray;">
-                            <%= posts[i].created.toLocaleString() %>
-                        </code>
-                        </div>
-                        <div class="post-text">
-                            <span id="abstract_<%=i%>"><%= posts[i].abstract %></span>
-                            <span>
-                                <a href="/post/<%=posts[i].id%>" class="symbol-monospace">
-                                    →
-                                </a>
-                            </span>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
+                <%- include('post-caption.ejs', {post: posts[i]}) %>
             <% } %>
         </div>
         <br>
@@ -57,7 +25,8 @@
                         </select>
                         of <%=pageCount%><% if (pageno != pageCount) { %> →&nbsp;
                     </span>
-                    <a class="page-navigator" href="/post/page/<%=pageno+1%>/?perpage=<%=postPerPage%>">older posts</a> <% } %>
+                    <a class="page-navigator" href="/post/page/<%=pageno+1%>/?perpage=<%=postPerPage%>">older posts</a>
+                    <% } %>
 
                 </div>
             </div>
