--- a/views/ejs/common/user-dropdown.ejs
+++ b/views/ejs/common/user-dropdown.ejs
@@ -1,4 +1,4 @@
-<div class="btn-group letter-space-neg05" style="margin-top: 8px">
+<div class="btn-group letter-space-neg05">
     <button type="button" class="btn btn-info dropdown-toggle btn-sm" data-toggle="dropdown"
         aria-haspopup="true" aria-expanded="false">
         <%= loginAs.name %> 
