--- a/views/ejs/common/header-navi.ejs
+++ b/views/ejs/common/header-navi.ejs
@@ -10,14 +10,14 @@
         <div class="col">
             <ul class="nav h5">
                 <li class="nav-item">
-                    <a class="nav-link gunjou-2 no-margin no-padding no-border" href="/post">posts</a>
+                    <a class="nav-link gunjou-2 header-navi" href="/post">posts</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link gunjou-4 no-margin no-padding no-border"
+                    <a class="nav-link gunjou-4 header-navi"
                         href="/archive">archives</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link gunjou-6 no-margin no-padding no-border" href="/about">about</a>
+                    <a class="nav-link gunjou-6 header-navi" href="/about">about</a>
                 </li>
             </ul>
         </div>
