--- a/views/ejs/common/login-dropdown.ejs
+++ b/views/ejs/common/login-dropdown.ejs
@@ -1,18 +1,23 @@
-<div class="btn-group letter-space-neg05" id="login-area" style="margin-top: 8px">
+<div class="btn-group letter-space-neg05" id="login-area">
     <button type="button" class="btn btn-info dropdown-toggle btn-sm" data-toggle="dropdown" aria-haspopup="true"
         aria-expanded="false">
         login
     </button>
-    <div class="medium-padding dropdown-menu dropdown-menu-right">
-        <form class="px-2" style="text-align: right;" method="POST">
-            <div class="form-group"><input name="username" type="text" class="form-control form-control-sm"
-                    id="usernamefield" placeholder="username">
+    <form class="dropdown-menu dropdown-menu-right px-4 py-3" style="text-align: right;" method="POST">
+        <div class="form-group">
+            <div class="input-group">
+                <div class="input-group-prepend">
+                    <div class="input-group-text">@</div>
+                </div>
+                <input name="username" type="text" class="form-control" id="usernamefield" placeholder="">
             </div>
-            <div class="form-group">
-                <input name="password" type="password" class="form-control form-control-sm" id="passwordfield"
-                    placeholder="password">
-            </div>
-            <input class="btn btn-info btn-sm" type="submit" formaction="login" value="submit">
-        </form>
-    </div>
+        </div>
+
+        <div class="form-group">
+            <input name="password" type="password" class="form-control" id="passwordfield" placeholder="password">
+        </div>
+        <div class="dropdown-divider"></div>
+        <input class="btn btn-info btn-sm" type="submit" formaction="login" value="submit">
+    </form>
+
 </div>
