--- a/views/ejs/editor-post.ejs
+++ b/views/ejs/editor-post.ejs
@@ -53,11 +53,11 @@
                     </div>
                     <div class="form-group">
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="checkbox" id="privatepostcheckbox" value="option1">
+                            <input name="isprivate" class="form-check-input" type="checkbox" id="privatepostcheckbox" value="option1">
                             <label class="form-check-label" for="privatepostcheckbox">private post</label>
                         </div>
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="checkbox" id="disablecommentcheckbox" value="option2">
+                            <input name="disablecomment" class="form-check-input" type="checkbox" id="disablecommentcheckbox" value="option2">
                             <label class="form-check-label" for="disablecommentcheckbox">disable comment</label>
                         </div>
                         <div class="form-check form-check-inline">
