unified post editing page

--- a/views/ejs/common/post-view.ejs
+++ b/views/ejs/common/post-view.ejs
@@ -1,8 +1,7 @@
 <div id="headers" style="margin-bottom: 1rem;">
     <h5 class="font-weight-600 letter-space-neg05 no-margin">
         <%= post.title%>
-        <a class="font-weight-400" data-toggle="collapse" href="#page-console" aria-expanded="false"
-            aria-controls="collapseExample">
+        <a class="font-weight-400"  href="<%=post.id%>/edit">
             [edit]
         </a>
     </h5>
