--- a/views/ejs/common/post-caption.ejs
+++ b/views/ejs/common/post-caption.ejs
@@ -20,7 +20,15 @@
         <a href="/user/<%=post.author.username %>" class="font-weight-500">
           <%= post.author.name %>
         </a>
-
+        <% if(post.tags.length > 0) { %>
+        ・
+        <% for(let i=0; i<post.tags.length; i++) { %>
+        <a href="/tags/<%=post.tags[i]%>"><%=post.tags[i]%></a>
+        <% if(i != post.tags.length-1) { %>
+        /
+        <% } %>
+        <% } %>
+        <% } %>
       </div>
       <div class="post-text">
         <span id="abstract-<%=post.id%>"><%= post.abstract %></span>
