--- a/views/ejs/editor-post.ejs
+++ b/views/ejs/editor-post.ejs
@@ -5,29 +5,29 @@
         <%- include('common/header.ejs', {loginAs: loginAs, noUserDropdown: false}) %>
 
         <div class="container">
-            <h5 class="letter-space-neg05 font-weight-500">create new post</h5>
+            <h5 class="letter-space-neg05 font-weight-500"><%=headings%></h5>
             <br>
             <div class="">
-                <% if (drafts) { %>
-                <div class="form-group">
-                    <select class="custom-select" id="draftselector" onchange="getDraft(this)">
-                        <option value="new" selected> - choose from your drafts - </option>
-                        <% for (let i=0; i<drafts.length; i++) { %>
-                        <option value="<%=drafts[i].id%>"><%=drafts[i].title%> -
-                            <%=drafts[i].abstract%></option>
-                        <% } %>
-                    </select>
-                </div>
-                <% } %>
-
                 <form method="POST">
+                    <% if (drafts) { %>
+                    <div class="form-group">
+                        <select class="custom-select" id="draftselector" name="draft" onchange="getDraft(this)">
+                            <option value="new" selected> - choose from your drafts - </option>
+                            <% for (let i=0; i<drafts.length; i++) { %>
+                            <option value="<%=drafts[i].id%>"><%=drafts[i].title%> -
+                                <%=drafts[i].abstract%></option>
+                            <% } %>
+                        </select>
+                    </div>
+                    <% } %>
 
                     <div class="form-group">
                         <div class="input-group">
                             <div class="input-group-prepend">
                                 <div class="input-group-text">📰</div>
                             </div>
-                            <input name="title" type="text" class="form-control" id="titlefield" placeholder="title...">
+                            <input name="title" type="text" class="form-control" id="titlefield" placeholder="title..."
+                                <% if(post) { %> value="<%=post.title%>" <% } %>>
                         </div>
                     </div>
 
@@ -36,7 +36,8 @@
                             <div class="input-group-prepend">
                                 <div class="input-group-text">ℹ️</div>
                             </div>
-                            <input name="brief" type="text" class="form-control" id="brieffield" placeholder="brief...">
+                            <input name="brief" type="text" class="form-control" id="brieffield" placeholder="brief..."
+                                <% if(post) { %> value="<%=post.abstract%>" <% } %>>
                         </div>
                     </div>
                     <div class="form-group">
@@ -44,20 +45,26 @@
                             <div class="input-group-prepend">
                                 <div class="input-group-text">🏷️</div>
                             </div>
-                            <input name="tags" type="text" class="form-control" id="tagsfield" placeholder="tags, seperate with comma...">
+                            <input name="tags" type="text" class="form-control" id="tagsfield"
+                                placeholder="tags, seperate with comma..." <% if(post) { %>
+                                value="<%=post.tags.join(', ')%>" <% } %>>
                         </div>
                     </div>
                     <div class="form-group">
-                        <textarea name="body" class="form-control" id="posteditfield" placeholder="you can format with HTML <tags/> or markdown"
-                            rows="0" oninput="autoGrow(this)" onclick="initAutoGrow(this)"></textarea>
+                        <textarea name="body" class="form-control" id="posteditfield"
+                            placeholder="you can format with HTML <tags/> or markdown" rows="0" oninput="autoGrow(this)"
+                            onclick="initAutoGrow(this)"><% if(post) { %><%=post.body%><% } %></textarea>
                     </div>
                     <div class="form-group">
                         <div class="form-check form-check-inline">
-                            <input name="isprivate" class="form-check-input" type="checkbox" id="privatepostcheckbox" value="option1">
+                            <input name="isprivate" class="form-check-input" type="checkbox" id="privatepostcheckbox"
+                                value="isprivate" <% if(post && post.isPrivate)  { %> checked <% } %>>
                             <label class="form-check-label" for="privatepostcheckbox">private post</label>
                         </div>
                         <div class="form-check form-check-inline">
-                            <input name="disablecomment" class="form-check-input" type="checkbox" id="disablecommentcheckbox" value="option2">
+                            <input name="disablecomment" class="form-check-input" type="checkbox"
+                                id="disablecommentcheckbox" value="disablecomment"
+                                <% if(post && !post.enableComment)  { %> checked <% } %>>
                             <label class="form-check-label" for="disablecommentcheckbox">disable comment</label>
                         </div>
                         <div class="form-check form-check-inline">
@@ -67,35 +74,13 @@
                     </div>
 
                     <div style="text-align: right;">
-
                         <input id="preview-btn" type="button" value="Preview" class="btn btn-light mb-2" />
-                        <input id="savetodraft-btn" onclick="saveToDraft(this)" class="btn btn-secondary mb-2" type="button" value="Save to Drafts"
-                            formaction="/savetodraft" />
-                        <input class="btn btn-primary mb-2" type="submit" value="Add to Posts"
-                            formaction="<%=formaction%>" />
+                        <input id="savetodraft-btn" onclick="saveToDraft(this)" class="btn btn-secondary mb-2"
+                            type="button" value="Save to Drafts" formaction="/savetodraft" />
+                        <input class="btn btn-primary mb-2" type="submit" <% if (post) { %> value="Modify Post"
+                            <% } else { %> value="Add to Posts" <% } %> formaction="<%=formaction%>" />
                     </div>
                 </form>
-                <script>
-                    $(function () {
-                        var originalContent = $('#content').html();
-                        var isPreviewed = false;
-                        $("#preview-btn").click(function () {
-                            $('#content').html('<hr>' + marked($('#posteditfield').val()));
-                            if (!isPreviewed) {
-                                let previewButtonClone = $('#preview-btn').clone();
-                                previewButtonClone.val("Remove Preview");
-                                previewButtonClone.click(function () {
-                                    $('#content').html(originalContent)
-                                    $('#preview-btn').text('Preview');
-                                    $(this).remove();
-                                    isPreviewed = false;
-                                })
-                                $('#content-display').append(previewButtonClone);
-                            }
-                            isPreviewed = true;
-                        });
-                    });
-                </script>
             </div>
         </div>
         <div class="container">
@@ -106,4 +91,30 @@
         </div>
         <%- include('common/footer.ejs') %>
     </div>
+
+    <script>
+        var originalContent = $('#content').html();
+        var isPreviewed = false;
+        $("#preview-btn").click(function () {
+            $('#content').html('<hr>' + marked($('#posteditfield').val()));
+            if (!isPreviewed) {
+                let previewButtonClone = $('#preview-btn').clone();
+                previewButtonClone.val("Remove Preview");
+                previewButtonClone.click(function () {
+                    $('#content').html(originalContent)
+                    $('#preview-btn').text('Preview');
+                    $(this).remove();
+                    isPreviewed = false;
+                })
+                $('#content-display').append(previewButtonClone);
+            }
+            isPreviewed = true;
+        });
+
+    </script>
+    <% if (post) { %>
+    <script>
+        $('#preview-btn').click();
+    </script>
+    <% } %>
 </body>
